[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pgtoolkit"
description = "PostgreSQL Support from Python"
readme = "README.rst"
license = { text = "PostgreSQL" }
requires-python = ">=3.9"
authors = [
    { name = "Dalibo", email = "contact@dalibo.com" },
]
maintainers = [
    { name = "Denis Laxalde", email = "denis.laxalde@dalibo.com" },
    { name = "Pierre Giraud", email = "pierre.giraud@dalibo.com" },
    { name = "Julian Vanden Broeck", email = "julian.vandenbroeck@dalibo.com" },
]
keywords = ["postgresql", "postgresql.conf", "pg_hba", "pgpass", "pg_service.conf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: PostgreSQL License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/dalibo/pgtoolkit"
Documentation = "https://pgtoolkit.readthedocs.io/"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
pgtoolkit = ["py.typed"]

[tool.setuptools_scm]
