[metadata]
long_description = file: README.rst
classifiers =
    License :: OSI Approved
    Programming Language :: Python :: 3

[tool:pytest]
addopts = -vvv --strict --showlocals --cov=pgtoolkit --cov-report=term-missing --doctest-modules

[mypy]
warn_unused_ignores = True
allow_redefinition = True
