[metadata]
long_description = file: README.rst
classifiers =
    License :: OSI Approved
    Programming Language :: Python :: 3

[coverage:run]
source = pgtoolkit

[flake8]
doctests = True
select = B,C,E,F,W,T4,B9
ignore =
  E203, # whitespace before ':'
  E501, # line too long
  E226, # missing whitespace around arithmetic operator
  W503, # line break before binary operator

[tool:pytest]
addopts = -vvv --strict --showlocals --doctest-modules

[mypy]
warn_unused_ignores = True
allow_redefinition = True
show_error_codes = True
